--- a/config/.env
+++ b/config/.env
@@ -7,3 +7,6 @@ DEVELOPMENT_FRONTEND_HOST = http://localhost:3000/
 
 PRODUCTION_BACKEND_HOST = https://api.qrcodechamp.com/
 DEVELOPMENT_BACKEND_HOST = http://localhost:8000/
+
+PRODUCTION_IMAGE_HOST = https://qr.qrcodechamp.com/
+DEVELOPMENT_IMAGE_HOST = http://localhost:8000/
