--- a/config/.env
+++ b/config/.env
@@ -1,11 +1,11 @@
 NODE_ENV = production
 DEV_PORT = 8000
-PROD_PORT = 30003
+PROD_PORT = 30002
 
-PRODUCTION_FRONTEND_HOST = https://dx.qrcodechamp.com/
+PRODUCTION_FRONTEND_HOST = https://qrcodechamp.com/
 DEVELOPMENT_FRONTEND_HOST = http://localhost:3000/
 
-PRODUCTION_BACKEND_HOST = https://dxapi.qrcodechamp.com/
+PRODUCTION_BACKEND_HOST = https://api.qrcodechamp.com/
 DEVELOPMENT_BACKEND_HOST = http://localhost:8000/
 
 PRODUCTION_IMAGE_HOST = https://qr.qrcodechamp.com/uploads/
