--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^3.0.3",
         "nodemon": "^3.1.0",
         "puppeteer": "^23.10.2"
     }
